--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,9 @@ html {
     -webkit-text-size-adjust: 100%;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
-
+.container-fluid.py-5.about {
+    background: #ffd446;
+}
 article,
 aside,
 figcaption,
