--- a/css/style.css
+++ b/css/style.css
@@ -56,10 +56,11 @@ html {
 .container-fluid.py-5.about {
     background: #ffd446;
 }
-span.pr-2.cpt{
-    background: #ffd446;
 
+span.pr-2.cpt {
+    background: #ffd446;
 }
+
 article,
 aside,
 figcaption,
@@ -72,9 +73,12 @@ nav,
 section {
     display: block;
 }
-.container-fluid.position-relative {
+
+
+/*.container-fluid.position-relative {
     background: #ffd446;
 }
+*/
 
 body {
     margin: 0;
@@ -86,13 +90,14 @@ body {
     text-align: right;
     background-color: #fff;
 }
+
+
 /* width */
+
 ::-webkit-scrollbar {
-  width: 0px;
+    width: 0px;
 }
-.container-fluid.position-relative {
-    background: #ffd446;
-}
+
 [tabindex="-1"]:focus:not(:focus-visible) {
     outline: 0 !important;
 }
@@ -673,7 +678,7 @@ pre code {
     .container,
     .container-sm,
     .container-md {
-        max-width: 720px;
+       max-width: 7 20px;
     }
 }
 
@@ -9891,7 +9896,7 @@ button.bg-dark:focus {
 }
 
 .text-primary {
-     margin-left: 20px;
+    margin-left: 20px;
     color: #17a2b8 !important;
 }
 
@@ -10142,7 +10147,7 @@ a.text-dark:focus {
 
 .navbar-light .navbar-nav .nav-link {
     padding: 30px 15px;
-    color: white;
+    color: #00394f;
     outline: none;
 }
 
